tests/baselines/reference/parser553699.errors.txt
tests/cases/conformance/parser/ecmascript5/RegressionTests/parser553699.ts(3,21): error TS1213: Identifier expected. 'public' is a reserved word in strict mode. Class definitions are automatically in strict mode.
tests/cases/conformance/parser/ecmascript5/RegressionTests/parser553699.ts(3,21): error TS2304: Cannot find name 'public'.


==== tests/cases/conformance/parser/ecmascript5/RegressionTests/parser553699.ts (2 errors) ====
    class Foo {
      constructor() { }
      public banana (x: public) { }
                        ~~~~~~
!!! error TS1213: Identifier expected. 'public' is a reserved word in strict mode. Class definitions are automatically in strict mode.
                        ~~~~~~
!!! error TS2304: Cannot find name 'public'.
    }
    
    class Bar {
      constructor(c: Bar) { }
    }